# dnspx

./: .gitignore  Cargo.toml  LICENSE.md  README.md  RELEASE_NOTES.md  SECURITY.md  THIRD_PARTY_LICENSES.md  build-release.sh  deny.toml  dnspx_config.toml  example_update_config.toml
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  fast-ci.yml  release.yml  security.yml
src/: app_lifecycle.rs  app_lifecycle_tests.rs  main.rs
src/adapters/: mod.rs
src/adapters/aws/: credentials_provider.rs  mod.rs  profile_utils.rs  types.rs  vpc_info_provider.rs
src/adapters/aws/tests/: core_scenarios.rs  edge_case_tests.rs  error_handling_tests.rs  error_scenarios.rs  integration_tests.rs  mock_providers.rs  mod.rs  scanner_tests.rs  test_helpers.rs
src/adapters/cli/: console_cli_adapter.rs  mod.rs
src/adapters/config/: file_store.rs  mod.rs
src/adapters/resolver/: composite_resolver.rs  doh_client.rs  mod.rs  sspi_auth.rs  sspi_auth_mock.rs  standard_dns_client.rs
src/adapters/server/: mod.rs  tcp_listener.rs  udp_listener.rs
src/adapters/status/: memory_status_store.rs  mod.rs
src/adapters/tests/: mod.rs  ui_integration_tests.rs
src/adapters/tui/: app.rs  event.rs  logging.rs  mod.rs  text_utils.rs  ui.rs  worker.rs
src/adapters/tui/components/: add_cache_entry_modal.rs  cache_view_panel.rs  hotkey_panel.rs  log_panel.rs  mod.rs  popup.rs  status_panel.rs
src/adapters/update/: manager.rs  mod.rs  release_analyzer.rs  security.rs  transaction.rs
src/adapters/update/tests/: integration_tests.rs  manager_tests.rs  mod.rs  release_analyzer_tests.rs  robustness_tests.rs  security_tests.rs  test_utils.rs  transaction_tests.rs
src/aws_integration/: scanner.rs
src/config/: migration.rs  mod.rs  models.rs
src/core/: config_manager.rs  context.rs  dns_cache.rs  dns_request_processor.rs  error.rs  local_hosts_resolver.rs  mod.rs  rule_engine.rs  types.rs
src/dns_protocol/: mod.rs
src/ports/: mod.rs
test/: dns-proxy-test.sh
